# aws-bootcamp

./: README.md  main.py  pyproject.toml
s3/example-1/: main.py  pyproject.toml
s3/example-1/data/: employees.csv
